Fix keyword tab overflow by setting max-width.

--- a/css/metabox-320.css
+++ b/css/metabox-320.css
@@ -440,16 +440,18 @@ li.score:after {
 }
 
 .assessment-results__remove-marks {
-	height: 28px;
-	margin-top: -16px;
+	height: 36px;
+	margin-top: 0;
 	margin-bottom: 15px;
 	margin-left: 3px;
-	padding: 4px 4px 4px 28px;
-	border: 0;
-	border-radius: 3px;
+	padding: 8px 10px 8px 28px;
+	border: 1px solid #dbdbdb;
+	border-radius: 4px;
 	outline: none;
-	background: url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23555555%22%20d%3D%22M555%201335l78%2D141q%2D87%2D63%2D136%2D159t%2D49%2D203q0%2D121%2061%2D225%2D229%20117%2D381%20353%20167%20258%20427%20375zm389%2D759q0%2D20%2D14%2D34t%2D34%2D14q%2D125%200%2D214%2E5%2089%2E5t%2D89%2E5%20214%2E5q0%2020%2014%2034t34%2014%2034%2D14%2014%2D34q0%2D86%2061%2D147t147%2D61q20%200%2034%2D14t14%2D34zm363%2D191q0%207%2D1%209%2D105%20188%2D315%20566t%2D316%20567l%2D49%2089q%2D10%2016%2D28%2016%2D12%200%2D134%2D70%2D16%2D10%2D16%2D28%200%2D12%2044%2D87%2D143%2D65%2D263%2E5%2D173t%2D208%2E5%2D245q%2D20%2D31%2D20%2D69t20%2D69q153%2D235%20380%2D371t496%2D136q89%200%20180%2017l54%2D97q10%2D16%2028%2D16%205%200%2018%206t31%2015%2E5%2033%2018%2E5%2031%2E5%2018%2E5%2019%2E5%2011%2E5q16%2010%2016%2027zm37%20447q0%20139%2D79%20253%2E5t%2D209%20164%2E5l280%2D502q8%2045%208%2084zm448%20128q0%2035%2D20%2069%2D39%2064%2D109%20145%2D150%20172%2D347%2E5%20267t%2D419%2E5%2095l74%2D132q212%2D18%20392%2E5%2D137t301%2E5%2D307q%2D115%2D179%2D282%2D294l63%2D112q95%2064%20182%2E5%20153t144%2E5%20184q20%2034%2020%2069z%22%2F%3E%3C%2Fsvg%3E") no-repeat 6px center;
+	color: #555;
+	background: #f7f7f7 url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23555555%22%20d%3D%22M555%201335l78%2D141q%2D87%2D63%2D136%2D159t%2D49%2D203q0%2D121%2061%2D225%2D229%20117%2D381%20353%20167%20258%20427%20375zm389%2D759q0%2D20%2D14%2D34t%2D34%2D14q%2D125%200%2D214%2E5%2089%2E5t%2D89%2E5%20214%2E5q0%2020%2014%2034t34%2014%2034%2D14%2014%2D34q0%2D86%2061%2D147t147%2D61q20%200%2034%2D14t14%2D34zm363%2D191q0%207%2D1%209%2D105%20188%2D315%20566t%2D316%20567l%2D49%2089q%2D10%2016%2D28%2016%2D12%200%2D134%2D70%2D16%2D10%2D16%2D28%200%2D12%2044%2D87%2D143%2D65%2D263%2E5%2D173t%2D208%2E5%2D245q%2D20%2D31%2D20%2D69t20%2D69q153%2D235%20380%2D371t496%2D136q89%200%20180%2017l54%2D97q10%2D16%2028%2D16%205%200%2018%206t31%2015%2E5%2033%2018%2E5%2031%2E5%2018%2E5%2019%2E5%2011%2E5q16%2010%2016%2027zm37%20447q0%20139%2D79%20253%2E5t%2D209%20164%2E5l280%2D502q8%2045%208%2084zm448%20128q0%2035%2D20%2069%2D39%2064%2D109%20145%2D150%20172%2D347%2E5%20267t%2D419%2E5%2095l74%2D132q212%2D18%20392%2E5%2D137t301%2E5%2D307q%2D115%2D179%2D282%2D294l63%2D112q95%2064%20182%2E5%20153t144%2E5%20184q20%2034%2020%2069z%22%2F%3E%3C%2Fsvg%3E") no-repeat 6px center;
 	background-size: 16px;
+	font-size: 0.8rem;
 	cursor: pointer;
 }
 
@@ -935,6 +937,14 @@ ul.wpseo-metabox-tabs li {
 	border-width: 1px 1px 0;
 	border-style: solid solid none;
 	border-color: #dfdfdf;
+}
+
+ul.wpseo-metabox-tabs li,
+ul.wpseo-metabox-tabs li a {
+	overflow: hidden;
+	max-width: 250px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .wpseotab.active {
